--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="form.css">
 </head><img src="alt school logo.jpg" height="200/200" />
 <h3>Already an Alt schooler?<a href="https://portal.altschoolafrica.com/auth/login">sign in!</a> </h3>
-<a href="./index.html4">altschoolafrica courses</a><br>
-<a href="./index.html3">media element</a>
+<a href="./INDEX4.html">altschoolafrica courses</a><br>
+<a href="./index3.html">media element</a>
 <h2>signup</h2>
 <body> <p>
     take the next steps to apply at altschool Africa<br>
     <br>
-    <p>click here to know more about me <a href="./index.html2">'About me'</a></p>
+    <p>click here to know more about me <a href="./index2.html">'About me'</a></p>
     <section class="trow">
         <form class="first">
             <label>First Name</label><br>
