--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
     <li>To build a strong portfolio for myself.</li>
  </OL> 
  <footer>
-    click here to see page two <a href="./form.html">page two</a>
+    click here to see page two <a href="./index.html">page two</a>
  </footer>
 </body>
 </html>
